k3s/cluster/apps/longhorn-backed/mattermost/workload/deployment-mattermost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost
  namespace: mattermost
  labels:
    app.kubernetes.io/name: mattermost
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mattermost
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mattermost
        app.kubernetes.io/component: app
    spec:
      nodeSelector:
        longhorn: "enabled"
      securityContext:
        runAsUser: 2000
        runAsGroup: 2000
        fsGroup: 2000
        supplementalGroups:
          - 2000
      terminationGracePeriodSeconds: 60
      containers:
        - name: mattermost
          image: ghcr.io/this-is-tobi/mirror/mostlymatter:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8065
          startupProbe:
            httpGet:
              path: /api/v4/system/ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 90
          readinessProbe:
            httpGet:
              path: /api/v4/system/ping
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /api/v4/system/ping
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 2000m
              memory: 4Gi
          volumeMounts:
            - name: mattermost
              mountPath: /mattermost/config
              subPath: config
            - name: shared
              mountPath: /mattermost/data
              subPath: data
            - name: backups
              mountPath: /backups

      volumes:
        - name: mattermost
          persistentVolumeClaim:
            claimName: mattermost
        - name: shared
          persistentVolumeClaim:
            claimName: mattermost-shared
        - name: backups
          nfs:
            server: 192.168.1.231
            path: /mnt/user/backups
