k3s/cluster/apps/longhorn-backed/mattermost/workload/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mattermost
  namespace: mattermost
  labels:
    app.kubernetes.io/name: mattermost
    app.kubernetes.io/component: app
spec:
  ingressClassName: traefik
  rules:
    - host: theborocrew.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mattermost
                port:
                  number: 8065
    - host: www.theborocrew.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mattermost
                port:
                  number: 8065
